fix: search section on homepage has broken styles

--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -7,47 +7,6 @@
     margin: 0 auto;
 }
 
-.section.search-container h2 {
-    display: inline-block;
-    top: -60px;
-    background-color: var(--text-color-inverted);
-    border-radius: 40px;
-    padding: 40px 30px 0;
-    margin: 0 ;
-    bottom: 60px;
-    width: 60%;
-}
-
-.section.search-container h2::before,
-.section.search-container h2::after {
-    --radius: 10px;
-
-    content: '';
-    position: absolute;
-    width: calc(2 * var(--radius));
-    height: var(--radius);
-    top: calc(28px - var(--radius));
-    z-index: 10;
-    left: calc(5px - 2 * var(--radius));
-    box-shadow: 0.5rem 0.25rem 0 0 white;
-    border-radius: 0 0 var(--radius) 0;
-}
-
-.section.search-container h2::after {
-    display: block;
-    right: calc(5px - 2 * var(--radius));
-    left: initial;
-    border-bottom: none;
-    min-width: 0;
-    box-shadow: -0.5rem 0.25rem 0 0 white;
-    border-radius: 0 0 0 var(--radius);
-}
-
-.home-page .section.search-container p {
-    margin-top: -40px;
-    max-width: 726px;
-}
-
 .search.block {
     display: flex;
     justify-content: center;
@@ -103,7 +62,7 @@
 }
 
 @media (min-width: 600px) {
-    .section.search-container h2 {
+    .section.search-container :is(h1, h2) {
         width: 80%;
     }
 
@@ -137,7 +96,7 @@
 }
 
 @media (min-width: 768px) {
-    .section.search-container h2 {
+    .section.search-container :is(h1, h2) {
         width: initial;
     }
 }
